--- a/index.html
+++ b/index.html
@@ -42,104 +42,117 @@
           <p class="text-ls font-medium" >Временная работа</>
         </div>
         <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="mt-2 flex flex-col space-y-2 text-sm font-medium text-gray-500 sm:flex-row sm:items-center sm:space-y-0 sm:space-x-2">
-          <div class="text-sm">Категория:<span class=" text-sm ml-2 mr-3 rounded-full bg-green-100 px-2 py-0.5 text-green-900"> Любая </span></div>
-          <div class="">Город:<span class="ml-2 mr-3 rounded-full bg-blue-100 px-2 py-0.5 text-blue-900">Балашиха</span></div>
-          <div class="">Оплата:<span class="ml-2 mr-3 rounded-full bg-red-100 px-2 py-0.5 text-red-900">25000 ₽</span></div>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
         </div>
-        <div class="mt-5 flex items-center justify-left text-gray-600">
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Позвонить</button>
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Написать в лс</button>
-        </div>
-      </div>
-    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="mt-2 flex flex-col space-y-2 text-sm font-medium text-gray-500 sm:flex-row sm:items-center sm:space-y-0 sm:space-x-2">
-          <div class="text-sm">Категория:<span class=" text-sm ml-2 mr-3 rounded-full bg-green-100 px-2 py-0.5 text-green-900"> Любая </span></div>
-          <div class="">Город:<span class="ml-2 mr-3 rounded-full bg-blue-100 px-2 py-0.5 text-blue-900">Балашиха</span></div>
-          <div class="">Оплата:<span class="ml-2 mr-3 rounded-full bg-red-100 px-2 py-0.5 text-red-900">25000 ₽</span></div>
-        </div>
-        <div class="mt-5 flex items-center justify-left text-gray-600">
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Позвонить</button>
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Написать в лс</button>
-        </div>
-      </div>
-    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="mt-2 flex flex-col space-y-2 text-sm font-medium text-gray-500 sm:flex-row sm:items-center sm:space-y-0 sm:space-x-2">
-          <div class="text-sm">Категория:<span class=" text-sm ml-2 mr-3 rounded-full bg-green-100 px-2 py-0.5 text-green-900"> Любая </span></div>
-          <div class="">Город:<span class="ml-2 mr-3 rounded-full bg-blue-100 px-2 py-0.5 text-blue-900">Балашиха</span></div>
-          <div class="">Оплата:<span class="ml-2 mr-3 rounded-full bg-red-100 px-2 py-0.5 text-red-900">25000 ₽</span></div>
-        </div>
-        <div class="mt-5 flex items-center justify-left text-gray-600">
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Позвонить</button>
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Написать в лс</button>
-        </div>
-      </div>
-    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="mt-2 flex flex-col space-y-2 text-sm font-medium text-gray-500 sm:flex-row sm:items-center sm:space-y-0 sm:space-x-2">
-          <div class="text-sm">Категория:<span class=" text-sm ml-2 mr-3 rounded-full bg-green-100 px-2 py-0.5 text-green-900"> Любая </span></div>
-          <div class="">Город:<span class="ml-2 mr-3 rounded-full bg-blue-100 px-2 py-0.5 text-blue-900">Балашиха</span></div>
-          <div class="">Оплата:<span class="ml-2 mr-3 rounded-full bg-red-100 px-2 py-0.5 text-red-900">25000 ₽</span></div>
-        </div>
-        <div class="mt-5 flex items-center justify-left text-gray-600">
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Позвонить</button>
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Написать в лс</button>
-        </div>
-      </div>
-    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="mt-2 flex flex-col space-y-2 text-sm font-medium text-gray-500 sm:flex-row sm:items-center sm:space-y-0 sm:space-x-2">
-          <div class="text-sm">Категория:<span class=" text-sm ml-2 mr-3 rounded-full bg-green-100 px-2 py-0.5 text-green-900"> Любая </span></div>
-          <div class="">Город:<span class="ml-2 mr-3 rounded-full bg-blue-100 px-2 py-0.5 text-blue-900">Балашиха</span></div>
-          <div class="">Оплата:<span class="ml-2 mr-3 rounded-full bg-red-100 px-2 py-0.5 text-red-900">25000 ₽</span></div>
-        </div>
-        <div class="mt-5 flex items-center justify-left text-gray-600">
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Позвонить</button>
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Написать в лс</button>
-        </div>
-      </div>
-    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="mt-2 flex flex-col space-y-2 text-sm font-medium text-gray-500 sm:flex-row sm:items-center sm:space-y-0 sm:space-x-2">
-          <div class="text-sm">Категория:<span class=" text-sm ml-2 mr-3 rounded-full bg-green-100 px-2 py-0.5 text-green-900"> Любая </span></div>
-          <div class="">Город:<span class="ml-2 mr-3 rounded-full bg-blue-100 px-2 py-0.5 text-blue-900">Балашиха</span></div>
-          <div class="">Оплата:<span class="ml-2 mr-3 rounded-full bg-red-100 px-2 py-0.5 text-red-900">25000 ₽</span></div>
-        </div>
-        <div class="mt-5 flex items-center justify-left text-gray-600">
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Позвонить</button>
-          <button class="cursor-pointer border py-2 px-8 text-center text-xs leading-tight transition-colors duration-150 ease-in-out hover:border-gray-500 rounded-lg">Написать в лс</button>
+        <div class="flex space-x-2">
+          <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button>
         </div>
       </div>
     </div>
-    
+    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button>
+        </div>
+      </div>
+    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button>
+        </div>
+      </div>
+    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button>
+        </div>
+      </div>
+    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button>
+        </div>
+      </div>
+    </div>    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button>
+        </div>
+      </div>
+    </div>
 
+ 
     
 
 
