--- a/index.html
+++ b/index.html
@@ -73,101 +73,101 @@
         <div class="flex space-x-2">
           <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
           <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
-          <a href="tel:1234567890" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
+          <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
+          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
+        </div>
+      </div>
+    </div>
+    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
+          <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
+          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
+        </div>
+      </div>
+    </div>
+    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
+          <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
+          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
+        </div>
+      </div>
+    </div>
+    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
+          <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
+          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
+        </div>
+      </div>
+    </div>
+    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
+      <div class="w-full text-left">
+        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
+          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
+          <p class="text-ls font-medium" >Временная работа</>
+        </div>
+        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
+        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
+          <div class="flex h-fit space-x-2 text-sm font-medium">
+            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
+            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
+            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
+          </div>
+        </div>
+        <div class="flex space-x-2">
+          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
+          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
+          <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
           <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
         </div>
       </div>
     </div>
         
     
-    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
-          <div class="flex h-fit space-x-2 text-sm font-medium">
-            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
-            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
-            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
-          </div>
-        </div>
-        <div class="flex space-x-2">
-          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
-          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
-          <a href="tel:1234567890" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
-          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
-        </div>
-      </div>
-    </div>    
-    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
-          <div class="flex h-fit space-x-2 text-sm font-medium">
-            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
-            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
-            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
-          </div>
-        </div>
-        <div class="flex space-x-2">
-          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
-          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
-          <a href="tel:1234567890" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
-          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
-        </div>
-      </div>
-    </div>    
-    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
-          <div class="flex h-fit space-x-2 text-sm font-medium">
-            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
-            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
-            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
-          </div>
-        </div>
-        <div class="flex space-x-2">
-          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
-          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
-          <a href="tel:1234567890" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
-          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
-        </div>
-      </div>
-    </div>    
-    <div class="mx-auto my-1 flex max-w-screen-sm rounded-xl border border-gray-100 p-4 text-left text-gray-600 shadow-lg sm:p-8">
-      <div class="w-full text-left">
-        <div class="mb-2 flex flex-col justify-between text-gray-600 sm:flex-row">
-          <h3 class="font-medium text-2xl font-extrabold">Гарипов Ильнар</h3>
-          <p class="text-ls font-medium" >Временная работа</>
-        </div>
-        <p class="text-sm">Ищу временную работу под любые задачи. умею многое, варить, жить. Дрюжелюбный и работоспособный</p>
-        <div class="flex flex-col text-gray-700 sm:flex-row my-3">
-          <div class="flex h-fit space-x-2 text-sm font-medium">
-            <div class="rounded-full bg-green-100 px-2 py-0.5 text-green-700">Копирайтер</div>
-            <div class="rounded-full bg-blue-100 px-2 py-0.5 text-blue-700">Балашиха</div>
-            <div class="rounded-full bg-red-100 px-2 py-0.5 text-red-700">55000₽</div>
-          </div>
-        </div>
-        <div class="flex space-x-2">
-          <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
-          <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
-          <a href="tel:1234567890" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</a>
-          <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
-        </div>
-      </div>
-    </div>
 
  
  
