--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <div class="flex space-x-2">
           <!-- <button class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Позвонить</button>
           <button class="w-full rounded-lg border-2 border-transparent text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</button> -->
-          <!-- <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Скопировать номер</a> -->
+          <!-- <a href="tel:+79083430745" class="w-full text-center rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Скопировать номер!</a> -->
           <input type="hidden" value="89083430745" id="myInput">
-          <button id="callButton" class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Скопировать номер</button>
+          <button onclick="copyText()" id="callButton" class="w-full rounded-lg border-2 bg-white px-3 py-1 text-sm font-medium text-gray-500">Скопировать номер</button>
           <a href="https://t.me/dminnullin" class="w-full rounded-lg border-2 border-transparent text-center text-sm bg-blue-600 px-3 py-1 font-medium text-white">Написать в лс</a>
         </div>
       </div>
